--- a/final_project/ui/Dialog.ui
+++ b/final_project/ui/Dialog.ui
@@ -510,7 +510,7 @@
     </widget>
    </item>
    <item row="5" column="2">
-    <widget class="QPushButton" name="pushButton_22">
+    <widget class="QPushButton" name="pointButton">
      <property name="minimumSize">
       <size>
        <width>50</width>
@@ -534,7 +534,7 @@
     </widget>
    </item>
    <item row="5" column="3">
-    <widget class="QPushButton" name="pushButton_20">
+    <widget class="QPushButton" name="changeSignButton">
      <property name="minimumSize">
       <size>
        <width>50</width>
